OAK-1482: ConcurrentModificationException in FileStore
Fixed as suggested by Chetan Mehrotra

git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1572996 13f79535-47bb-0310-9956-ffa450edef68